--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.3'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
     
+    //Proxy
+    implementation group: 'cglib', name: 'cglib', version: '3.3.0'
 
 }
 
