--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,14 @@ compileJava {
     options.compilerArgs << '-parameters'
 }
 
+compileTestJava {
+    options.compilerArgs << '-parameters'
+}
+
+test {
+    systemProperty "org.apache.logging.log4j.level", "debug"
+}
+
 dependencies {
 
     //Mongo
@@ -36,6 +44,10 @@ dependencies {
     
     //Proxy
     implementation group: 'cglib', name: 'cglib', version: '3.3.0'
+
+    //Logging
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
 
 }
 
